Refactor environment variables and enhance security configurations in Docker setup and application code

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,14 @@
-# Database Configuration
-DB_HOST=localhost
+# PostgreSQL Database Configuration
+POSTGRES_DB=meja_kita_online
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=your_very_secure_password_here
+
+# Application Database Configuration
+DB_HOST=postgres
 DB_PORT=5432
 DB_NAME=meja_kita_online
 DB_USER=postgres
-DB_PASSWORD=your_secure_password
+DB_PASSWORD=your_very_secure_password_here
 
 # Application Configuration
 NODE_ENV=production
@@ -11,8 +16,8 @@ PORT=3000
 SESSION_SECRET=your-super-secure-session-secret-at-least-32-characters
 
 # Admin Configuration
-ADMIN_EMAIL=admin@mejakita.com
-ADMIN_PASSWORD=admin123
+ADMIN_EMAIL=admin@yourdomain.com
+ADMIN_PASSWORD=your_secure_admin_password
 
 # Security Settings
 SECURE_COOKIES=true
@@ -21,3 +26,6 @@ TRUST_PROXY=true
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
+
+# Logging
+LOG_LEVEL=info
